log
Wed 24 Apr 2024 09:22:10 PM UTC: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
111b9ef
Wed 24 Apr 2024 09:22:27 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:57:12: error: ‘*map.buckets’ may be used uninitialized [-Werror=maybe-uninitialized]
   57 |         map->buckets[i]=NULL;
      |         ~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7c51ba0
Wed 24 Apr 2024 09:26:59 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:57:12: error: ‘*map.buckets’ may be used uninitialized [-Werror=maybe-uninitialized]
   57 |         map->buckets[i]=NULL;
      |         ~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
923592b
Wed 24 Apr 2024 09:29:41 PM UTC: 
 hashmap.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
In file included from test.c:4:
test.c: In function ‘createMap’:
hashmap.c:59:8: error: ‘*map.buckets’ is used uninitialized [-Werror=uninitialized]
   59 |     map->buckets [capacity] = NULL;
      |     ~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9d8258f
